[tool.poetry]
name = "improved-wgan-perception-distortion-tradeoff"
version = "0.1.0"
description = ""
authors = ["davidallerup <71313801+davidallerup@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
tensorboardx = "^2.6.2.2"
torch = "^2.7.0"
torchvision = "^0.22.0"
gpustat = "^1.1.1"
click = "^8.2.0"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
