[tool.poetry]
name = "improved-wgan-perception-distortion-tradeoff"
version = "0.1.0"
description = ""
authors = ["davidallerup <71313801+davidallerup@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.12"
torch = { version = "^2.3.1+cu121", source = "pytorch-cu121" }
torchvision = { version = "^0.18.1+cu121", source = "pytorch-cu121" }
tensorboardx = "^2.6.2.2"
gpustat = "^1.1.1"
click = "^8.2.0"
matplotlib = "^3.10.3"
numpy = '<2.0.0'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"